cabal-version:       >=1.10
name:                EarleyM
version:             0.1.0.0
synopsis:            Monadic Earley Parsing
description:         Monadic combinators for Earley Parsing, supporting left-recursive, left-unfactored and ambiguous grammars.
homepage:            https://github.com/Nick-Chapman/EarleyM
license:             BSD3
license-file:        LICENSE
author:              Nick Chapman
maintainer:          nic@amadido.co.uk
category:            Parsing
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

library
  exposed-modules:     EarleyM, EarleyM.Pipe  
  build-depends:       base >=4.8 && <4.10, containers >=0.5 && <0.6, HMap >=1.2 && <1.4
  hs-source-dirs:      src test examples
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       UnitTest Testing Example.Catalan Example.PrepositionalAttachmentAmbiguity Example.FunctionalLanguage Example.DictionaryLexing Example.Arith
  build-depends:       base, containers, HMap
  hs-source-dirs:      src test examples
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

source-repository head
  type:                 git
  location:             https://github.com/Nick-Chapman/EarleyM.git
  