Name:                   earley-parsing
Version:                0.0.0
Author:                 Nick Chapman
Maintainer:             nic@amadido.co.uk
Homepage:               https://github.com/Nick-Chapman/Earley.git
License:                BSD3
License-File:           LICENSE
Synopsis:               Monadic-style combinators for Earley Parsing
Description:            Monadic-style combinators for Earley Parsing, supporting left-recursive, left-unfactored and ambiguous grammars.
Category:               Parsing

Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fno-warn-name-shadowing
  Exposed-Modules:      Earley
--  Other-Modules:        Earley.Parsing.Internal
  Build-Depends:        base, containers, HMap
  Build-Depends:        base >= 4 && < 5

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
--                      , test
  Ghc-Options:          -Wall -fno-warn-name-shadowing
  Main-Is:              Main.hs
  Build-Depends:        base, containers, HMap
--                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/Nick-Chapman/Earley.git
