Name:                   earley-parsing
Version:                0.0.0
Cabal-Version:          >= 1.10
Build-Type:             Simple
License:                BSD3
License-File:           LICENSE

Author:                 Nick Chapman
Maintainer:             nic@amadido.co.uk
Stability:              experimental                        
Homepage:               https://github.com/Nick-Chapman/Earley.git
                        
Synopsis:               Monadic-style combinators for Earley Parsing
Description:            Monadic-style combinators for Earley Parsing, supporting left-recursive, left-unfactored and ambiguous grammars.
Category:               Parsing

Extra-Source-Files:     README.md, ChangeLog.md

Library
  Exposed-Modules:      Earley
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fno-warn-name-shadowing
  Build-Depends:        base >= 4 && < 5, containers, HMap

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
  Ghc-Options:          -Wall -fno-warn-name-shadowing
  Main-Is:              Main.hs
  Build-Depends:        base, containers, HMap

Source-Repository head
  Type:                 git
  Location:             https://github.com/Nick-Chapman/Earley.git
